# financial-analysis

./: .gitignore  README.md  main.py  pyproject.toml
src/: config.py  constants.py
src/database/: __init__.py  connection.py  documents.py  kline_document.py  methods.py  selector.py
src/enums/: __init__.py  enums.py
src/runner/: __init__.py  historical_runner.py
src/runner/utils/: mapping.py  period.py
src/schemes/: __init__.py  bybit.py  historical.py  kline.py  period.py
src/services/: __init__.py  bybit.py
src/utils/: __init__.py  dateutils.py
