[project]
name = "financial-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "beanie>=2.0.0",
    "environs>=14.3.0",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "pybit>=5.12.0",
    "pydantic>=2.11.10",
    "pymongo>=4.15.2",
]
